13-Dec-2013 Fixing error writing out .vcxproj files with a compiler warning level set to zero.

10-Dec-2013 Another modification to the package assembly load, which now also reads in program database byte data, for untrusted locations, if -debugsymbols is passed on the command line.

10-Dec-2013 Opus.Core.DependencyNode now also has a bi-direction link for required modules, similar to external dependencies.

09-Dec-2013 Modification to the package assembly load. When debugging is enabled, the assembly must be from a trusted location.

09-Dec-2013 Raise an exception if a specific package version is not found in the registered roots. This can happen if package versions are spread across several roots.

22-Nov-2013 Loading the package assembly uses a different mechanism that should allow reflection over a semi-trusted source, e.g. a network drive.

06-Nov-2013 Added Opus.Core.DependencyNode.PostCreateOptionCollection, that wraps the extended logic of BaseOptionCollection.FinalizeOptions.

05-Nov-2013 Added new version of Location.SubDirectory which takes a Location.EExists flag. This can be useful to build up paths that will be created eventually.

05-Nov-2013 Added Opus.Core.EPlatform.NotWindows, NotUnix, and NotOSX, to allow exclusions of a single platform in target attributes.

05-Nov-2013 RequiredModule dependencies in Xcode projects are now represented as an optional link dependency. Deadstripping ought to resolve the extra size, and optional means that dyld will not attempt to load it at executable launch.

04-Nov-2013 Added new C OutputFileFlags, OSXBundle, OSXBundleContents and OSXBundleMacOS, for OSX application bundle builds, referring to the .app, .app/Contents, and .app/Contents/MacOS folders, respectively.

03-Nov-2013 Added Mingw-4.8.1

02-Nov-2013 Release 0.50 Alpha 6

02-Nov-2013 Removed Opus.Core.File. Use Opus.Core.Location or FileLocation as a replacement.

02-Nov-2013 Removed deprecated Opus.Core.Exception(string,System.Exception)
